--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,32 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+  <ion-menu menuId="m1" contentId="main-content">
+    <ion-header>
+      <ion-toolbar>
+        <ion-thumbnail slot="start">
+          <img [src]="'assets/logo.png'" [alt]="'Logo'">
+        </ion-thumbnail>
+        <ion-title>Negocio Dicsys</ion-title>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content class="ion-padding">
+      <ion-list>
+        <ion-menu-toggle>
+          <ion-item button [routerLink]="['/main']">
+            <ion-label>Dashboard</ion-label>
+          </ion-item>
+          <ion-item>
+            <ion-label>Carrito</ion-label>
+          </ion-item>
+        </ion-menu-toggle>
+      </ion-list>
+    </ion-content>
+  </ion-menu>
+  <div class="ion-page" id="main-content">
+    <ion-content class="ion-padding">
+
+    </ion-content>
+
+    <ion-router-outlet id="main-content"></ion-router-outlet>
+  </div>
 </ion-app>
+
